<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Space Calendar</string>
    <string name="hello_world">Hello space!</string>

    <string-array name="search_types">
        <item>Coordinates</item>
        <item>All</item>
    </string-array>
    
        <string name="edit_search">Edit Search</string>
        <string name="where_do_you_want_to_look">Ok great! Where do you want to look?</string>
        <string name="ra">RA</string>
        <string name="dec">DEC</string>
        <string name="lift_off">Lift Off!</string>
        <string name="satellite">SATELLITE</string>
        <string name="target">TARGET</string>
        <string name="revolution">REVOLUTION</string>
        <string name="ra_caps">RA</string>
        <string name="dec_caps">DEC</string>
        <string name="start_time">START TIME</string>
        <string name="end_time">END TIME</string>
        <string name="url">URL</string>
</resources>