<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/satellite_pic"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/satellite" />

            <TextView
                android:id="@+id/satellite"
                style="@style/field_text"
                android:drawablePadding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                style="@style/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/target" />

            <TextView
                android:id="@+id/target_name"
                style="@style/field_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                style="@style/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/revolution" />

            <TextView
                android:id="@+id/revolution"
                style="@style/field_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                style="@style/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ra_caps" />

                    <TextView
                        android:id="@+id/ra"
                        style="@style/field_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dec_caps" />

                    <TextView
                        android:id="@+id/dec"
                        style="@style/field_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <View
                style="@style/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time" />

            <TextView
                android:id="@+id/start_time"
                style="@style/field_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                style="@style/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_time" />

            <TextView
                android:id="@+id/end_time"
                style="@style/field_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                style="@style/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSimbadClick"
                android:text="See on Simbad" 
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>