<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/secondary_navigation_grey"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/where_do_you_want_to_look" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ra" />

        <EditText
            android:id="@+id/ra_1"
            style="@style/radec_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="00"
            android:nextFocusDown="@+id/ra_2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":" />

        <EditText
            android:id="@id/ra_2"
            style="@style/radec_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="00"
            android:nextFocusDown="@+id/ra_3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":" />

        <EditText
            android:id="@id/ra_3"
            style="@style/radec_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="00"
            android:nextFocusDown="@+id/ra_4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="." />

        <EditText
            android:id="@id/ra_4"
            style="@style/radec_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="00"
            android:nextFocusDown="@+id/dec_1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dec" />

        <EditText
            android:id="@id/dec_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="+000"
            android:inputType="numberSigned"
            android:maxLength="4"
            android:nextFocusDown="@+id/dec_2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":" />

        <EditText
            android:id="@id/dec_2"
            style="@style/radec_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="00"
            android:nextFocusDown="@+id/dec_3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":" />

        <EditText
            android:id="@id/dec_3"
            style="@style/radec_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="00"
            android:nextFocusDown="@+id/dec_4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="." />

        <EditText
            android:id="@id/dec_4"
            style="@style/radec_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="00" />
    </LinearLayout>

    <Button
        android:id="@+id/dialog_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lift_off" />

</LinearLayout>